Update looker_run.sh